# Huanvae-Chat-App

./: .commit_msg  .commit_msg_temp  .gitignore  README.md  eslint.config.js  gpg.key  install.sh  latest.json  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: apt-repo.yml  release.yml  verify-keys.yml
dists/stable/: InRelease  Release  Release.gpg
scripts/: README.md  pre-release.ps1  release-config.txt  release.ps1  setup-wsl-rust.ps1  test-all.ps1
scripts/linux/: README.md  pre-release.sh  release.sh  setup-deps.sh  test-all.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/data/HuanWei_api_huanvae_cn/chat/: chat_data.db
src-tauri/nsis/: installer-hooks.nsh
src-tauri/nsis/hooks/: preinstall.nsh
src-tauri/scripts/linux/: postinst.sh  postrm.sh
src-tauri/src/: android_update.rs  database.rs  device_info.rs  download.rs  lib.rs  main.rs  mobile_media_server.rs  session_lock.rs  sounds.rs  storage.rs  tray.rs  user_data.rs
src-tauri/src/db/: contacts.rs  conversations.rs  files.rs  messages.rs  mod.rs  types.rs
src-tauri/src/desktop/: installer_type.rs  mod.rs  session_lock.rs  tray.rs
src-tauri/src/lan_transfer/: config.rs  discovery.rs  mod.rs  protocol.rs  resume.rs  server.rs  transfer.rs
src-tauri/src/lan_transfer/diagnostics/: android.rs  linux.rs  macos.rs  mod.rs  types.rs  windows.rs
src-tauri/src/permissions/: linux.rs  macos.rs  mod.rs  types.rs  windows.rs
src-tauri/windows/: hooks.nsi
src-tauri/wix/: firewall.wxs  main.wxs
src/api/: auth.ts  client.ts  devices.ts  friends.ts  groupMessages.ts  groups.ts  messages.ts  profile.ts  storage.ts  webrtc.ts
src/chat/: index.ts
src/chat/friend/: ChatMessages.tsx  MessageBubble.tsx  index.ts  useLocalFriendMessages.ts
src/chat/group/: GroupChatMessages.tsx  GroupMessageBubble.tsx  index.ts  useChatMenu.ts  useLocalGroupMessages.ts
src/chat/shared/: ChatInputArea.tsx  ChatMenu.tsx  ChatPanel.tsx  FileAttachButton.tsx  FileMessageContent.tsx  FilePreviewModal.tsx  LocalFilePreview.tsx  MessageContextMenu.tsx  MobileMediaPreview.tsx  MobileMessageFullPreview.tsx  MultiSelectActionBar.tsx  SendStatusIndicator.tsx  UploadProgress.tsx  UserProfilePopup.tsx  animations.ts  index.ts
src/components/: AddFriendModal.tsx  AddModal.tsx  GroupsModal.tsx  ProfileModal.tsx
src/components/account/: CardSlot.tsx  CardStack.tsx  index.ts
src/components/chat/: ChatInputArea.tsx  ChatMenu.tsx  ChatMessages.tsx  ChatPanel.tsx  FileAttachButton.tsx  FileMessageContent.tsx  FilePreviewModal.tsx  GroupChatMessages.tsx  GroupMessageBubble.tsx  LocalFilePreview.tsx  MessageBubble.tsx  MessageContextMenu.tsx  MultiSelectActionBar.tsx  UploadProgress.tsx  UserProfilePopup.tsx
src/components/common/: Avatar.tsx  CircularProgress.tsx  ErrorToast.tsx  Icons.tsx  ListStates.tsx  LoadingOverlay.tsx  LoadingSpinner.tsx  SearchBox.tsx  SyncStatusBanner.tsx
src/components/conversations/: ConversationList.tsx
src/components/files/: FilesModal.tsx
src/components/friends/: FriendList.tsx
src/components/groups/: GroupList.tsx
src/components/lanTransfer/: index.ts
src/components/meeting/: MeetingEntryModal.tsx
src/components/profile/: AvatarUploader.tsx  PasswordForm.tsx  ProfileIcons.tsx  ProfileInfoForm.tsx  index.ts
src/components/settings/: DataManagementCard.tsx  DeviceListPanel.tsx  NotificationSoundCard.tsx  SettingsGroup.tsx  SettingsPanel.tsx  SettingsRow.tsx  SettingsSection.tsx  SoundSelector.tsx  index.ts  (+1 more)
src/constants/: authAnimations.ts  listAnimations.ts
src/contexts/: SessionContext.tsx  WebSocketContext.tsx  wsHandlers.ts
src/db/: index.ts
src/hooks/: useAccounts.ts  useAuth.ts  useChatActions.ts  useChatMenu.ts  useDevices.ts  useFileCache.ts  useFileUpload.ts  useFiles.ts  useFriends.ts  useGroupMessages.ts  useGroups.ts  useInitialSync.ts  useLanTransfer.ts  useLocalConversations.ts  useLocalFriendMessages.ts  useLocalGroupMessages.ts  useLocalMessages.ts  useMainPage.ts  useMessages.ts  useMobileBackHandler.ts  useMobileNavigation.ts  useMultiSelect.ts  useNotificationSounds.ts  useRegisterForm.ts  useResizablePanel.ts  useSearchPopup.ts  useWebRTC.ts
src/lanTransfer/: LanTransferPage.tsx  api.ts  index.ts  styles.css
src/media/: MediaPreviewPage.tsx  api.ts  index.ts  styles.css
src/meeting/: MeetingPage.tsx  api.ts  index.ts  styles.css  useWebRTC.ts
src/pages/: AccountSelector.tsx  Login.tsx  Main.tsx  MeetingPage.tsx  Register.tsx
src/services/: deviceInfo.ts  diagnosticService.ts  fileCache.ts  fileService.ts  historyService.ts  imageDimensions.ts  mobileKeystore.ts  notificationService.ts  sessionLock.ts  sessionPersist.ts  syncService.ts  updateService.ts  windowSize.ts
src/stores/: chatStore.ts  conversationsStore.ts  fileCacheStore.ts  index.ts  messagesStore.ts  settingsStore.ts  uiStore.ts  userCacheStore.ts
src/styles/: README.md  base.css  index.css  variables.css
src/theme/: ThemeEditor.css  ThemeEditor.tsx  ThemeEditorPage.css  ThemeEditorPage.tsx  ThemeProvider.tsx  api.ts  generator.ts  index.ts  presets.ts  store.ts  types.ts  utils.ts
src/types/: account.ts  chat.ts  device.ts  session.ts  websocket.ts
src/update/: config.ts  index.ts  service.android.ts  service.ts  store.ts  usePlatformUpdate.ts  useSilentUpdate.android.ts  useSilentUpdate.ts
src/utils/: androidFileHandler.ts  avatar.ts  conversationId.ts  format.ts  network.ts  platform.ts  time.ts
tests/: README.md  checklist.ts  registry.ts  setup.ts
tests/components/: LoadingSpinner.test.tsx  NotificationSoundCard.test.tsx  SettingsPanel.test.tsx  SyncStatusBanner.test.tsx  UpdateToast.test.tsx  registry.test.tsx
tests/unit/: devices.test.ts  diagnosticService.test.ts  format.test.ts  imageDimensions.test.ts  lanTransfer.test.ts  notification.test.ts  notificationSounds.test.ts  sessionLock.test.ts  settings.test.ts  update.test.ts
tests/utils/: test-utils.tsx
train_api.md/: api_doc.md
(+91 files in other folders)
