[package]
name = "huanvae-chat-app"
version = "1.0.18"
description = "Huanvae Chat App - 即时通讯应用"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "huanvae_chat_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-fs = "2.4.4"
tauri-plugin-http = "2.5.4"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP 客户端（下载头像、文件下载）
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# 异步流处理
futures-util = "0.3"

# 目录管理
dirs = "6.0.0"

# 时间
chrono = { version = "0.4", features = ["serde"] }

# 错误处理
thiserror = "2.0.17"

# SQLite 数据库（纯 Rust 实现）
rusqlite = { version = "0.34", features = ["bundled"] }

# 线程安全的单例
once_cell = "1.21.3"

# 互斥锁
parking_lot = "0.12.5"

# 系统进程信息（用于会话锁检测）
sysinfo = "0.33"

# 操作系统信息插件
tauri-plugin-os = "2"

# MAC 地址获取
mac_address = "1.1"
tauri-plugin-window-state = "2.4.1"

# ============================================
# 局域网文件互传
# ============================================

# mDNS 服务发现
mdns-sd = "0.17.1"

# 本地 IP 地址获取
local-ip-address = "0.6.8"

# 文件哈希 (SHA-256)
sha2 = "0.10.9"
hex = "0.4.3"

# UUID 生成
uuid = { version = "1.19.0", features = ["v4"] }

# 异步通道（用于事件通知）
async-channel = "2.5.0"

# MIME 类型猜测
mime_guess = "2.0.5"

# 主机名获取
hostname = "0.4.2"

# ============================================
# 平台特定的密钥链依赖
# keyring 3.x 默认不启用任何后端，必须显式指定 feature
# ============================================

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
