# ============================================
# Huanvae Chat App - Tauri 后端配置
# ============================================
#
# ## 平台支持
# - 桌面端 (Windows/macOS/Linux): 完整功能
# - 移动端 (Android/iOS): 部分功能（无托盘、无会话锁）
#
# ## 更新日志
# - 2026-01-22: 添加桌面/移动端平台分离，条件编译依赖
# ============================================

[package]
name = "huanvae-chat-app"
version = "1.0.22"
description = "Huanvae Chat App - 即时通讯应用"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "huanvae_chat_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# ============================================
# 共享依赖（所有平台）
# ============================================
[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-fs = "2.4.4"
tauri-plugin-http = "2.5.4"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP 客户端（下载头像、文件下载）
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# 异步流处理
futures-util = "0.3"

# 目录管理
dirs = "6.0.0"

# 时间
chrono = { version = "0.4", features = ["serde"] }

# 错误处理
thiserror = "2.0.17"

# SQLite 数据库（纯 Rust 实现）
rusqlite = { version = "0.34", features = ["bundled"] }

# 线程安全的单例
once_cell = "1.21.3"

# 互斥锁
parking_lot = "0.12.5"

# MAC 地址获取
mac_address = "1.1"

# ============================================
# 局域网文件互传（所有平台共享）
# ============================================

# mDNS 服务发现
mdns-sd = "0.17.1"

# 本地 IP 地址获取
local-ip-address = "0.6.8"

# 文件哈希 (SHA-256)
sha2 = "0.10.9"
hex = "0.4.3"

# UUID 生成
uuid = { version = "1.19.0", features = ["v4"] }

# 异步通道（用于事件通知）
async-channel = "2.5.0"

# MIME 类型猜测
mime_guess = "2.0.5"

# 主机名获取
hostname = "0.4.2"

# ============================================
# 桌面平台专属依赖 (Windows/macOS/Linux)
# ============================================
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
# 托盘图标支持
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
# 窗口状态记忆
tauri-plugin-window-state = "2.4.1"
# 更新器
tauri-plugin-updater = "2"
# 系统进程信息（用于会话锁检测）
sysinfo = "0.33"

# ============================================
# 桌面平台专属：密钥链依赖
# keyring 3.x 默认不启用任何后端，必须显式指定 feature
# Android/iOS 不使用 keyring，使用平台原生安全存储
# ============================================

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

# ============================================
# 移动平台专属依赖 (Android/iOS)
# ============================================
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
# 安全密钥存储（使用 Android Keystore / iOS Keychain）
# 要求 Android API 28+ (Android 9.0+)
tauri-plugin-keystore = "2.1.0-alpha.1"

# 生物识别认证（仅用于敏感操作，如查看保存的密码）
# 官方插件：https://v2.tauri.app/plugin/biometric/
tauri-plugin-biometric = "2"

# 持久化存储（用于会话自动恢复，无需生物验证）
# 后台被杀后重新打开自动恢复登录状态，与 QQ/微信 体验一致
# 官方插件：https://v2.tauri.app/plugin/store/
tauri-plugin-store = "2"

# ============================================
# 移动端本地媒体服务器
# ============================================
# 解决 Android WebView 无法通过 asset:// 协议播放本地视频的问题
# 提供本地 HTTP 服务器 + Range 请求支持，实现流式播放
# 参考 Issue: https://github.com/tauri-apps/tauri/issues/12019
axum = "0.8"
tokio-util = { version = "0.7", features = ["io"] }

# ============================================
# 移动端返回按钮监听
# ============================================
# 处理 Android 手势返回和 iOS 返回按钮
# 参考: https://jsr.io/@kingsword/tauri-plugin-mobile-onbackpressed-listener
tauri-plugin-mobile-onbackpressed-listener = "2.0.0"
